tests/errors/return_outside_function.dang
# return is only valid inside a function, method, or constructor
return 1
